--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio ❤️</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body {
         font-family: "Helvetica", sans-serif;
@@ -12,26 +11,6 @@
     </style>
   </head>
   <body class="bg-gray-100">
-    <header class="bg-blue-500 text-white p-4">
-      <h1 class="text-3xl font-bold">My Portfolio ❤️</h1>
-    </header>
-
-    <main class="p-6">
-      <section class="bg-white rounded shadow-md p-6 max-w-xl mx-auto mt-10">
-        <h2 class="text-2xl font-bold mb-4">Hello, World!</h2>
-        <p class="text-gray-700 mb-4">
-          Welcome to my simple portfolio. This is a brief introduction to who I
-          am and what I do.
-        </p>
-        <p class="text-gray-700">
-          I'm excited to share more about my work and projects with you. Stay
-          tuned for updates!
-        </p>
-      </section>
-    </main>
-
-    <footer class="bg-gray-800 text-white text-center p-4 mt-10">
-      &copy; 2024 My Portfolio. All rights reserved.
-    </footer>
+    <h1 class="text-3xl font-bold">Hello Chacrit!</h1>
   </body>
 </html>
