--- a/index.html
+++ b/index.html
@@ -3,14 +3,164 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio ❤️</title>
-    <style>
-      body {
-        font-family: "Helvetica", sans-serif;
-      }
-    </style>
+    <title>My Portfolio</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.7/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="index.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-gray-100">
-    <h1 class="text-3xl font-bold">Hello Chacrit!</h1>
+  <body>
+    <main id="main" data-theme="light" class="min-h-screen bg-base-100">
+      <nav class="bg-base-200 border-b border-base-300 shadow-lg py-4">
+        <div class="max-w-3xl mx-auto w-full">
+          <div class="flex justify-end px-4 lg:px-0">
+            <label class="swap swap-rotate">
+              <input type="checkbox" id="theme-toggle" />
+              <svg
+                class="swap-on h-7 w-7 fill-current"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"
+                />
+              </svg>
+              <svg
+                class="swap-off h-7 w-7 fill-current"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"
+                />
+              </svg>
+            </label>
+          </div>
+        </div>
+      </nav>
+      <section class="mt-20">
+        <div class="max-w-3xl mx-auto w-full px-4 lg:px-0">
+          <div class="flex flex-col md:flex-row items-center gap-10">
+            <div class="avatar">
+              <div class="w-52 rounded-full">
+                <img src="/public/assets/images/rimuru.gif" />
+              </div>
+            </div>
+            <div class="min-h-52">
+              <div class="flex gap-2 mb-1">
+                <span
+                  class="text-xs bg-base-300 p-1.5 rounded-md border border-base-300 cursor-default w-fit"
+                  >CIS Student
+                </span>
+                <span
+                  class="text-xs bg-base-300 p-1.5 rounded-md border border-base-300 cursor-default w-fit"
+                  >Frontend</span
+                >
+                <span
+                  class="text-xs bg-base-300 p-1.5 rounded-md border border-base-300 cursor-default w-fit"
+                  >Backend</span
+                >
+              </div>
+              <h1 class="text-3xl font-semibold">Hi, Chacrit Poonpipit</h1>
+              <p class="mt-1">
+                Welcome to my portfolio website! This is a simple and clean
+                portfolio showcasing my work and projects. The website is built
+                using HTML and styled with Tailwind CSS.
+              </p>
+              <div class="mt-3 flex flex-col md:flex-row gap-2">
+                <div
+                  class="flex items-center gap-1 bg-base-300 py-2 px-4 rounded-md border border-base-300 cursor-default w-fit"
+                >
+                  <svg
+                    class="w-6 h-6"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-width="2"
+                      d="m3.5 5.5 7.893 6.036a1 1 0 0 0 1.214 0L20.5 5.5M4 19h16a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Z"
+                    />
+                  </svg>
+
+                  <span> chacrit.p@kkumail.com </span>
+                </div>
+                <div
+                  class="flex items-center gap-1 bg-base-300 py-2 px-4 rounded-md border border-base-300 cursor-default w-fit"
+                >
+                  <svg
+                    class="w-6 h-6"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M12.006 2a9.847 9.847 0 0 0-6.484 2.44 10.32 10.32 0 0 0-3.393 6.17 10.48 10.48 0 0 0 1.317 6.955 10.045 10.045 0 0 0 5.4 4.418c.504.095.683-.223.683-.494 0-.245-.01-1.052-.014-1.908-2.78.62-3.366-1.21-3.366-1.21a2.711 2.711 0 0 0-1.11-1.5c-.907-.637.07-.621.07-.621.317.044.62.163.885.346.266.183.487.426.647.71.135.253.318.476.538.655a2.079 2.079 0 0 0 2.37.196c.045-.52.27-1.006.635-1.37-2.219-.259-4.554-1.138-4.554-5.07a4.022 4.022 0 0 1 1.031-2.75 3.77 3.77 0 0 1 .096-2.713s.839-.275 2.749 1.05a9.26 9.26 0 0 1 5.004 0c1.906-1.325 2.74-1.05 2.74-1.05.37.858.406 1.828.101 2.713a4.017 4.017 0 0 1 1.029 2.75c0 3.939-2.339 4.805-4.564 5.058a2.471 2.471 0 0 1 .679 1.897c0 1.372-.012 2.477-.012 2.814 0 .272.18.592.687.492a10.05 10.05 0 0 0 5.388-4.421 10.473 10.473 0 0 0 1.313-6.948 10.32 10.32 0 0 0-3.39-6.165A9.847 9.847 0 0 0 12.007 2Z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                  <span> chacrit-p </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mt-3 md:mt-10 lg:mt-16">
+            <div class="grid grid-cols-12 gap-4">
+              <div class="col-span-12 md:col-span-5">
+                <div class="bg-base-300 p-4 rounded-lg">
+                  <h4 class="pb-2 font-semibold">About Me</h4>
+                  <p class="border-b border-base-200 pb-2">
+                    People interested in writing frontend websites
+                  </p>
+                  <ul class="space-y-2 mt-2">
+                    <li class="flex items-center gap-2">
+                      <svg
+                        class="w-6 h-6"
+                        aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                      >
+                        <path
+                          stroke="currentColor"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="M5 14v7M5 4.971v9.541c5.6-5.538 8.4 2.64 14-.086v-9.54C13.4 7.61 10.6-.568 5 4.97Z"
+                        />
+                      </svg>
+
+                      <span> Thailand, Nongkhai </span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-span-12 md:col-span-7">
+                <div class="px-4">
+                  <div role="tablist" class="tabs tabs-bordered">
+                    <div role="tab" class="tab tab-active">Projects</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
+  <script src="index.js"></script>
 </html>
