--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <main id="main" data-theme="light" class="min-h-screen bg-base-100">
-      <nav class="bg-base-200 border-b border-base-300 shadow-lg py-4">
+      <nav class="bg-base-200 border-b border-base-300 shadow-lg py-3">
         <div class="max-w-3xl mx-auto w-full">
-          <div class="flex justify-end px-4 lg:px-0">
+          <div class="flex justify-end px-3 lg:px-0">
             <label class="swap swap-rotate">
               <input type="checkbox" id="theme-toggle" />
               <svg
@@ -41,7 +41,7 @@
           </div>
         </div>
       </nav>
-      <section class="mt-20">
+      <section class="mt-3 md:mt-10 lg:mt-16">
         <div class="max-w-3xl mx-auto w-full px-4 lg:px-0">
           <div class="flex flex-col md:flex-row items-center gap-10">
             <div class="avatar">
