--- a/index.html
+++ b/index.html
@@ -4,17 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <meta property="og:title" content="My Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://chacrit-p.github.io" />
+    <meta property="og:image" content="/public/assets/images/rimuru.gif" />
+    <meta
+      property="og:description"
+      content="Welcome to my portfolio website! This is a simple and clean
+      portfolio showcasing my work and projects."
+    />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/public/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/public/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/public/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/public/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.7/dist/full.min.css"
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="index.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <main id="main" data-theme="light" class="min-h-screen bg-base-100">
-      <nav class="bg-base-200 border-b border-base-300 shadow-lg py-3">
+      <nav class="bg-base-100 py-5">
         <div class="max-w-3xl mx-auto w-full">
           <div class="flex justify-end px-3 lg:px-0">
             <label class="swap swap-rotate">
@@ -41,7 +71,7 @@
           </div>
         </div>
       </nav>
-      <section class="mt-3 md:mt-10 lg:mt-16">
+      <section class="mt-5">
         <div class="max-w-3xl mx-auto w-full px-4 lg:px-0">
           <div class="flex flex-col md:flex-row items-center gap-10">
             <div class="avatar">
@@ -50,7 +80,7 @@
               </div>
             </div>
             <div class="min-h-52">
-              <div class="flex gap-2 mb-1">
+              <div class="flex gap-2 mb-2">
                 <span
                   class="text-xs bg-base-300 p-1.5 rounded-md border border-base-300 cursor-default w-fit"
                   >CIS Student
@@ -70,7 +100,7 @@
                 portfolio showcasing my work and projects. The website is built
                 using HTML and styled with Tailwind CSS.
               </p>
-              <div class="mt-3 flex flex-col md:flex-row gap-2">
+              <div class="mt-4 flex flex-col md:flex-row gap-2">
                 <div
                   class="flex items-center gap-1 bg-base-300 py-2 px-4 rounded-md border border-base-300 cursor-default w-fit"
                 >
@@ -112,48 +142,6 @@
                     />
                   </svg>
                   <span> chacrit-p </span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="mt-3 md:mt-10 lg:mt-16">
-            <div class="grid grid-cols-12 gap-4">
-              <div class="col-span-12 md:col-span-5">
-                <div class="bg-base-300 p-4 rounded-lg">
-                  <h4 class="pb-2 font-semibold">About Me</h4>
-                  <p class="border-b border-base-200 pb-2">
-                    People interested in writing frontend websites
-                  </p>
-                  <ul class="space-y-2 mt-2">
-                    <li class="flex items-center gap-2">
-                      <svg
-                        class="w-6 h-6"
-                        aria-hidden="true"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="24"
-                        height="24"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                      >
-                        <path
-                          stroke="currentColor"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          stroke-width="2"
-                          d="M5 14v7M5 4.971v9.541c5.6-5.538 8.4 2.64 14-.086v-9.54C13.4 7.61 10.6-.568 5 4.97Z"
-                        />
-                      </svg>
-
-                      <span> Thailand, Nongkhai </span>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-span-12 md:col-span-7">
-                <div class="px-4">
-                  <div role="tablist" class="tabs tabs-bordered">
-                    <div role="tab" class="tab tab-active">Projects</div>
-                  </div>
                 </div>
               </div>
             </div>
