--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
       </nav>
       <section class="mt-5">
-        <div class="max-w-3xl mx-auto w-full px-4 lg:px-0">
+        <div class="max-w-3xl mx-auto w-full px-6 lg:px-0">
           <div class="flex flex-col md:flex-row items-center gap-10">
             <div class="avatar">
               <div class="w-52 rounded-full">
@@ -82,25 +82,25 @@
             <div class="min-h-52">
               <div class="flex gap-2 mb-2">
                 <span
-                  class="text-xs bg-base-300 p-1.5 rounded-md border border-base-300 cursor-default w-fit"
+                  class="text-xs bg-base-300 py-1.5 px-3 rounded-md border border-base-300 cursor-default w-fit"
                   >CIS Student
                 </span>
                 <span
-                  class="text-xs bg-base-300 p-1.5 rounded-md border border-base-300 cursor-default w-fit"
+                  class="text-xs bg-base-300 py-1.5 px-3 rounded-md border border-base-300 cursor-default w-fit"
                   >Frontend</span
                 >
                 <span
-                  class="text-xs bg-base-300 p-1.5 rounded-md border border-base-300 cursor-default w-fit"
+                  class="text-xs bg-base-300 py-1.5 px-3 rounded-md border border-base-300 cursor-default w-fit"
                   >Backend</span
                 >
               </div>
-              <h1 class="text-3xl font-semibold">Hi, Chacrit Poonpipit</h1>
-              <p class="mt-1">
+              <h1 id="title" class="text-3xl font-semibold min-h-[36px]"></h1>
+              <p class="mt-2 font-light">
                 Welcome to my portfolio website! This is a simple and clean
                 portfolio showcasing my work and projects. The website is built
                 using HTML and styled with Tailwind CSS.
               </p>
-              <div class="mt-4 flex flex-col md:flex-row gap-2">
+              <div class="mt-4 flex flex-col md:flex-row gap-3">
                 <div
                   class="flex items-center gap-1 bg-base-300 py-2 px-4 rounded-md border border-base-300 cursor-default w-fit"
                 >
