--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       content="Welcome to my portfolio website! This is a simple and clean
       portfolio showcasing my work and projects."
     />
-
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -34,7 +33,6 @@
     <link rel="manifest" href="/public/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
-
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.7/dist/full.min.css"
       rel="stylesheet"
@@ -44,7 +42,7 @@
   </head>
   <body>
     <main id="main" data-theme="light" class="min-h-screen bg-base-100">
-      <nav class="bg-base-100 py-5">
+      <nav class="py-5">
         <div class="max-w-3xl mx-auto w-full">
           <div class="flex justify-end px-3 lg:px-0">
             <label class="swap swap-rotate">
@@ -73,26 +71,27 @@
       </nav>
       <section class="mt-5">
         <div class="max-w-3xl mx-auto w-full px-6 lg:px-0">
-          <div class="flex flex-col md:flex-row items-center gap-10">
+          <div class="flex flex-col md:flex-row items-center gap-12">
             <div class="avatar">
               <div class="w-52 rounded-full">
                 <img src="/public/assets/images/rimuru.gif" />
               </div>
             </div>
+
             <div class="min-h-52">
               <div class="flex gap-2 mb-2">
                 <span
-                  class="text-xs bg-base-300 py-1.5 px-3 rounded-md border border-base-300 cursor-default w-fit"
+                  class="text-xs bg-base-300 text-base-content py-1.5 px-3 rounded-btn cursor-default w-fit"
                   >CIS Student
                 </span>
                 <span
-                  class="text-xs bg-base-300 py-1.5 px-3 rounded-md border border-base-300 cursor-default w-fit"
-                  >Frontend</span
-                >
+                  class="text-xs bg-primary text-primary-content py-1.5 px-3 rounded-btn cursor-default w-fit"
+                  >Frontend Dev
+                </span>
                 <span
-                  class="text-xs bg-base-300 py-1.5 px-3 rounded-md border border-base-300 cursor-default w-fit"
-                  >Backend</span
-                >
+                  class="text-xs bg-secondary text-secondary-content py-1.5 px-3 rounded-btn cursor-default w-fit"
+                  >Backend Dev
+                </span>
               </div>
               <h1 id="title" class="text-3xl font-semibold min-h-[36px]"></h1>
               <p class="mt-2 font-light">
@@ -102,7 +101,7 @@
               </p>
               <div class="mt-4 flex flex-col md:flex-row gap-3">
                 <div
-                  class="flex items-center gap-1 bg-base-300 py-2 px-4 rounded-md border border-base-300 cursor-default w-fit"
+                  class="flex items-center gap-1 bg-base-300 py-2 px-4 rounded-btn cursor-default w-fit"
                 >
                   <svg
                     class="w-6 h-6"
@@ -124,7 +123,7 @@
                   <span> chacrit.p@kkumail.com </span>
                 </div>
                 <div
-                  class="flex items-center gap-1 bg-base-300 py-2 px-4 rounded-md border border-base-300 cursor-default w-fit"
+                  class="flex items-center gap-1 bg-base-300 py-2 px-4 rounded-btn cursor-default w-fit"
                 >
                   <svg
                     class="w-6 h-6"
