--- a/index.html
+++ b/index.html
@@ -71,26 +71,28 @@
       </nav>
       <section class="mt-5">
         <div class="max-w-3xl mx-auto w-full px-6 lg:px-0">
-          <div class="flex flex-col md:flex-row items-center gap-12">
-            <div class="avatar">
-              <div class="w-52 rounded-full">
+          <div class="flex flex-col md:flex-row items-center gap-10 lg:gap-12">
+            <div
+              class="avatar ring-2 ring-primary/75 ring-offset-4 ring-offset-base-100 rounded-full"
+            >
+              <div class="w-56 rounded-full">
                 <img src="/public/assets/images/rimuru.gif" />
               </div>
             </div>
 
-            <div class="min-h-52">
-              <div class="flex gap-2 mb-2">
+            <div class="min-h-56">
+              <div class="flex gap-2 mb-3 lg:mt-5">
                 <span
                   class="text-xs bg-base-300 text-base-content py-1.5 px-3 rounded-btn cursor-default w-fit"
                   >CIS Student
                 </span>
                 <span
-                  class="text-xs bg-primary text-primary-content py-1.5 px-3 rounded-btn cursor-default w-fit"
-                  >Frontend Dev
+                  class="text-xs bg-base-300 text-base-content py-1.5 px-3 rounded-btn cursor-default w-fit"
+                  >Frontend
                 </span>
                 <span
-                  class="text-xs bg-secondary text-secondary-content py-1.5 px-3 rounded-btn cursor-default w-fit"
-                  >Backend Dev
+                  class="text-xs bg-base-300 text-base-content py-1.5 px-3 rounded-btn cursor-default w-fit"
+                  >Backend
                 </span>
               </div>
               <h1 id="title" class="text-3xl font-semibold min-h-[36px]"></h1>
@@ -101,7 +103,7 @@
               </p>
               <div class="mt-4 flex flex-col md:flex-row gap-3">
                 <div
-                  class="flex items-center gap-1 bg-base-300 py-2 px-4 rounded-btn cursor-default w-fit"
+                  class="flex items-center gap-2 bg-base-300 py-2 px-4 rounded-btn cursor-default w-fit"
                 >
                   <svg
                     class="w-6 h-6"
@@ -123,7 +125,7 @@
                   <span> chacrit.p@kkumail.com </span>
                 </div>
                 <div
-                  class="flex items-center gap-1 bg-base-300 py-2 px-4 rounded-btn cursor-default w-fit"
+                  class="flex items-center gap-2 bg-base-300 py-2 px-4 rounded-btn cursor-default w-fit"
                 >
                   <svg
                     class="w-6 h-6"
