--- a/index.html
+++ b/index.html
@@ -41,39 +41,205 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <main id="main" data-theme="light" class="min-h-screen bg-base-100">
+    <main id="main" class="min-h-screen bg-base-100">
       <nav class="py-5">
         <div class="max-w-3xl mx-auto w-full">
           <div class="flex justify-end px-3 lg:px-0">
-            <label class="swap swap-rotate">
-              <input type="checkbox" id="theme-toggle" />
-              <svg
-                class="swap-on h-7 w-7 fill-current"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
+            <div class="dropdown dropdown-end">
+              <div tabindex="0" role="button">
+                <svg
+                  class="w-7 h-7"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M16.872 9.687 20 6.56 17.44 4 4 17.44 6.56 20 16.873 9.687Zm0 0-2.56-2.56M6 7v2m0 0v2m0-2H4m2 0h2m7 7v2m0 0v2m0-2h-2m2 0h2M8 4h.01v.01H8V4Zm2 2h.01v.01H10V6Zm2-2h.01v.01H12V4Zm8 8h.01v.01H20V12Zm-2 2h.01v.01H18V14Zm2 2h.01v.01H20V16Z"
+                  />
+                </svg>
+              </div>
+              <ul
+                id="theme-lists"
+                tabindex="0"
+                class="dropdown-content bg-base-100 z-[1] w-56 p-2 gap-2 shadow rounded-box menu grid grid-cols-1 h-[450px] overflow-y-auto"
               >
-                <path
-                  d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"
-                />
-              </svg>
-              <svg
-                class="swap-off h-7 w-7 fill-current"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"
-                />
-              </svg>
-            </label>
+                <li data-theme="light" class="rounded-btn">
+                  <button type="button" data-theme="light">
+                    <span class="capitalize"> light </span>
+                  </button>
+                </li>
+                <li data-theme="dark" class="rounded-btn">
+                  <button type="button" data-theme="dark">
+                    <span class="capitalize"> dark </span>
+                  </button>
+                </li>
+                <li data-theme="cupcake" class="rounded-btn">
+                  <button type="button" data-theme="cupcake">
+                    <span class="capitalize"> cupcake </span>
+                  </button>
+                </li>
+                <li data-theme="bumblebee" class="rounded-btn">
+                  <button type="button" data-theme="bumblebee">
+                    <span class="capitalize"> bumblebee </span>
+                  </button>
+                </li>
+                <li data-theme="emerald" class="rounded-btn">
+                  <button type="button" data-theme="emerald">
+                    <span class="capitalize"> emerald </span>
+                  </button>
+                </li>
+                <li data-theme="corporate" class="rounded-btn">
+                  <button type="button" data-theme="corporate">
+                    <span class="capitalize"> corporate </span>
+                  </button>
+                </li>
+                <li data-theme="synthwave" class="rounded-btn">
+                  <button type="button" data-theme="synthwave">
+                    <span class="capitalize"> synthwave </span>
+                  </button>
+                </li>
+                <li data-theme="retro" class="rounded-btn">
+                  <button type="button" data-theme="retro">
+                    <span class="capitalize"> retro </span>
+                  </button>
+                </li>
+                <li data-theme="cyberpunk" class="rounded-btn">
+                  <button type="button" data-theme="cyberpunk">
+                    <span class="capitalize"> cyberpunk </span>
+                  </button>
+                </li>
+                <li data-theme="valentine" class="rounded-btn">
+                  <button type="button" data-theme="valentine">
+                    <span class="capitalize"> valentine </span>
+                  </button>
+                </li>
+                <li data-theme="halloween" class="rounded-btn">
+                  <button type="button" data-theme="halloween">
+                    <span class="capitalize"> halloween </span>
+                  </button>
+                </li>
+                <li data-theme="garden" class="rounded-btn">
+                  <button type="button" data-theme="garden">
+                    <span class="capitalize"> garden </span>
+                  </button>
+                </li>
+                <li data-theme="forest" class="rounded-btn">
+                  <button type="button" data-theme="forest">
+                    <span class="capitalize"> forest </span>
+                  </button>
+                </li>
+                <li data-theme="aqua" class="rounded-btn">
+                  <button type="button" data-theme="aqua">
+                    <span class="capitalize"> aqua </span>
+                  </button>
+                </li>
+                <li data-theme="lofi" class="rounded-btn">
+                  <button type="button" data-theme="lofi">
+                    <span class="capitalize"> lofi </span>
+                  </button>
+                </li>
+                <li data-theme="pastel" class="rounded-btn">
+                  <button type="button" data-theme="pastel">
+                    <span class="capitalize"> pastel </span>
+                  </button>
+                </li>
+                <li data-theme="fantasy" class="rounded-btn">
+                  <button type="button" data-theme="fantasy">
+                    <span class="capitalize"> fantasy </span>
+                  </button>
+                </li>
+                <li data-theme="wireframe" class="rounded-btn">
+                  <button type="button" data-theme="wireframe">
+                    <span class="capitalize"> wireframe </span>
+                  </button>
+                </li>
+                <li data-theme="black" class="rounded-btn">
+                  <button type="button" data-theme="black">
+                    <span class="capitalize"> black </span>
+                  </button>
+                </li>
+                <li data-theme="luxury" class="rounded-btn">
+                  <button type="button" data-theme="luxury">
+                    <span class="capitalize"> luxury </span>
+                  </button>
+                </li>
+                <li data-theme="dracula" class="rounded-btn">
+                  <button type="button" data-theme="dracula">
+                    <span class="capitalize"> dracula </span>
+                  </button>
+                </li>
+                <li data-theme="cmyk" class="rounded-btn">
+                  <button type="button" data-theme="cmyk">
+                    <span class="capitalize"> cmyk </span>
+                  </button>
+                </li>
+                <li data-theme="autumn" class="rounded-btn">
+                  <button type="button" data-theme="autumn">
+                    <span class="capitalize"> autumn </span>
+                  </button>
+                </li>
+                <li data-theme="business" class="rounded-btn">
+                  <button type="button" data-theme="business">
+                    <span class="capitalize"> business </span>
+                  </button>
+                </li>
+                <li data-theme="acid" class="rounded-btn">
+                  <button type="button" data-theme="acid">
+                    <span class="capitalize"> acid </span>
+                  </button>
+                </li>
+                <li data-theme="lemonade" class="rounded-btn">
+                  <button type="button" data-theme="lemonade">
+                    <span class="capitalize"> lemonade </span>
+                  </button>
+                </li>
+                <li data-theme="night" class="rounded-btn">
+                  <button type="button" data-theme="night">
+                    <span class="capitalize"> night </span>
+                  </button>
+                </li>
+                <li data-theme="coffee" class="rounded-btn">
+                  <button type="button" data-theme="coffee">
+                    <span class="capitalize"> coffee </span>
+                  </button>
+                </li>
+                <li data-theme="winter" class="rounded-btn">
+                  <button type="button" data-theme="winter">
+                    <span class="capitalize"> winter </span>
+                  </button>
+                </li>
+                <li data-theme="dim" class="rounded-btn">
+                  <button type="button" data-theme="dim">
+                    <span class="capitalize"> dim </span>
+                  </button>
+                </li>
+                <li data-theme="nord" class="rounded-btn">
+                  <button type="button" data-theme="nord">
+                    <span class="capitalize"> nord </span>
+                  </button>
+                </li>
+                <li data-theme="sunset" class="rounded-btn">
+                  <button type="button" data-theme="sunset">
+                    <span class="capitalize"> sunset </span>
+                  </button>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
-      <section class="mt-5">
+      <section class="lg:mt-10">
         <div class="max-w-3xl mx-auto w-full px-6 lg:px-0">
-          <div class="flex flex-col md:flex-row items-center gap-10 lg:gap-12">
+          <div class="flex flex-col md:flex-row items-cener gap-5 lg:gap-12">
             <div
-              class="avatar ring-2 ring-primary/75 ring-offset-4 ring-offset-base-100 rounded-full"
+              class="avatar ring-2 ring-primary/75 ring-offset-4 ring-offset-base-100 rounded-full w-fit"
             >
               <div class="w-56 rounded-full">
                 <img src="/public/assets/images/rimuru.gif" />
@@ -81,7 +247,7 @@
             </div>
 
             <div class="min-h-56">
-              <div class="flex gap-2 mb-3 lg:mt-5">
+              <div class="flex gap-2 mb-3 mt-5">
                 <span
                   class="text-xs bg-base-300 text-base-content py-1.5 px-3 rounded-btn cursor-default w-fit"
                   >CIS Student
@@ -95,8 +261,11 @@
                   >Backend
                 </span>
               </div>
-              <h1 id="title" class="text-3xl font-semibold min-h-[36px]"></h1>
-              <p class="mt-2 font-light">
+              <h1
+                id="title"
+                class="text-2xl sm:text-3xl font-semibold min-h-[36px]"
+              ></h1>
+              <p class="mt-2 font-light max-w-lg">
                 Welcome to my portfolio website! This is a simple and clean
                 portfolio showcasing my work and projects. The website is built
                 using HTML and styled with Tailwind CSS.
