--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta property="og:title" content="My Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://chacrit-p.github.io" />
-    <meta property="og:image" content="/public/assets/images/rimuru.gif" />
+    <meta property="og:image" content="/public/android-chrome-192x192.png" />
     <meta
       property="og:description"
       content="Welcome to my portfolio website! This is a simple and clean
       portfolio showcasing my work and projects."
     />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -31,8 +33,7 @@
       href="/public/favicon-16x16.png"
     />
     <link rel="manifest" href="/public/site.webmanifest" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.7/dist/full.min.css"
       rel="stylesheet"
@@ -48,20 +49,17 @@
             <div class="dropdown dropdown-end">
               <div tabindex="0" role="button">
                 <svg
-                  class="w-7 h-7"
-                  aria-hidden="true"
                   xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
                   fill="none"
                   viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-7 stroke-2"
                 >
                   <path
-                    stroke="currentColor"
                     stroke-linecap="round"
                     stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M16.872 9.687 20 6.56 17.44 4 4 17.44 6.56 20 16.873 9.687Zm0 0-2.56-2.56M6 7v2m0 0v2m0-2H4m2 0h2m7 7v2m0 0v2m0-2h-2m2 0h2M8 4h.01v.01H8V4Zm2 2h.01v.01H10V6Zm2-2h.01v.01H12V4Zm8 8h.01v.01H20V12Zm-2 2h.01v.01H18V14Zm2 2h.01v.01H20V16Z"
+                    d="M4.098 19.902a3.75 3.75 0 0 0 5.304 0l6.401-6.402M6.75 21A3.75 3.75 0 0 1 3 17.25V4.125C3 3.504 3.504 3 4.125 3h5.25c.621 0 1.125.504 1.125 1.125v4.072M6.75 21a3.75 3.75 0 0 0 3.75-3.75V8.197M6.75 21h13.125c.621 0 1.125-.504 1.125-1.125v-5.25c0-.621-.504-1.125-1.125-1.125h-4.072M10.5 8.197l2.88-2.88c.438-.439 1.15-.439 1.59 0l3.712 3.713c.44.44.44 1.152 0 1.59l-2.879 2.88M6.75 17.25h.008v.008H6.75v-.008Z"
                   />
                 </svg>
               </div>
@@ -314,6 +312,67 @@
                   <span> chacrit-p </span>
                 </div>
               </div>
+            </div>
+          </div>
+
+          <div class="mt-10">
+            <h3
+              class="text-center border-b-2 border-base-content font-semibold pb-2"
+            >
+              My Projects
+            </h3>
+
+            <div class="mt-5">
+              <ul class="list-decimal list-inside space-y-5">
+                <li class="text-lg font-semibold">
+                  <a
+                    class="link"
+                    target="_blank"
+                    href="/src/todo-application/index.html"
+                  >
+                    Todo Application
+                  </a>
+                  <span
+                    class="ml-2 py-1 px-2 rounded-btn text-xs bg-primary text-primary-content"
+                  >
+                    Html
+                  </span>
+                  <span
+                    class="ml-1 py-1 px-2 rounded-btn text-xs bg-secondary text-secondary-content"
+                  >
+                    Javascript
+                  </span>
+                  <span
+                    class="ml-1 py-1 px-2 rounded-btn text-xs bg-accent text-accent-content"
+                  >
+                    Tailwind
+                  </span>
+                </li>
+                <li class="text-lg font-semibold">
+                  <a
+                    class="link"
+                    target="_blank"
+                    href="/src/todo-application/index.html"
+                  >
+                    Todo Application
+                  </a>
+                  <span
+                    class="ml-2 py-1 px-2 rounded-btn text-xs bg-primary text-primary-content"
+                  >
+                    Html
+                  </span>
+                  <span
+                    class="ml-1 py-1 px-2 rounded-btn text-xs bg-secondary text-secondary-content"
+                  >
+                    Javascript
+                  </span>
+                  <span
+                    class="ml-1 py-1 px-2 rounded-btn text-xs bg-accent text-accent-content"
+                  >
+                    Tailwind
+                  </span>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
